ingress/configs/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.erag.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: telemetry-grafana
                port:
                  number: 80
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - grafana.erag.com
      secretName: tls-secret
